--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -19,6 +19,15 @@
         android:text="Canada"
         android:textSize="20sp"
         android:textColor="#000"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id= "@+id/image_recipe"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:text="Canada2"
+        android:textSize="20sp"
+        android:textColor="#000"/>
 
 
 
