--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -14,8 +14,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Canada"
-
         android:id="@+id/image_name"
+        android:layout_toRightOf="@+id/image"
+        android:textColor="#000"
+        android:layout_centerVertical="false"
+        android:layout_marginLeft="30dp"
+        android:textSize="17sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Canada2"
+        android:id="@+id/image_rec"
         android:layout_toRightOf="@+id/image"
         android:textColor="#000"
         android:layout_centerVertical="true"
